# Oxide-Lab

./: .env.example  .gitignore  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.config.js  vitest.config.ts
.github/workflows/: clippy-release.yml  mistral-binaries.yml  release.yml  sd-binaries.yml
egui-example/: Cargo.toml
egui-example/src/: main.rs
scripts/: prepare-llama-binaries.mjs
src/: app.css  app.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/oxide-hardware/: Cargo.toml
src-tauri/crates/oxide-hardware/permissions/autogenerated/: reference.md
src-tauri/crates/oxide-hardware/src/: commands.rs  gpu.rs  lib.rs  tests.rs  types.rs
src-tauri/crates/oxide-llamacpp/: Cargo.toml  build.rs
src-tauri/crates/oxide-llamacpp/permissions/: default.toml
src-tauri/crates/oxide-llamacpp/permissions/autogenerated/: reference.md
src-tauri/crates/oxide-llamacpp/permissions/autogenerated/commands/: get_backends_dir.toml  install_backend_release.toml  resolve_installed_backend_executable.toml
src-tauri/crates/oxide-llamacpp/permissions/schemas/: schema.json
src-tauri/crates/oxide-llamacpp/src/: args.rs  backend.rs  commands.rs  device.rs  lib.rs  path.rs  process.rs
src-tauri/crates/oxide-llamacpp/src/gguf/: commands.rs  mod.rs  model_planner.rs  types.rs
src-tauri/crates/oxide-utils/: Cargo.toml
src-tauri/crates/oxide-utils/src/: crypto.rs  http.rs  math.rs  network.rs  string.rs  system.rs
src-tauri/src/: i18n.rs  lib.rs  main.rs
src-tauri/src/api/: device.rs  download_manager.rs  local_models.rs  mod.rs  model_cards.rs  openai_server.rs  performance_api.rs  prefix_cache_api.rs  template.rs  web_utils.rs
src-tauri/src/api/commands/: attachments.rs  backend.rs  device.rs  experimental.rs  general.rs  generation.rs  locale.rs  mcp.rs  metadata.rs  mod.rs  model.rs  precision.rs  prompts.rs  rag.rs  settings_v2.rs  threads.rs
src-tauri/src/api/model_loading/: gguf.rs  mod.rs  safetensors.rs
src-tauri/src/api/model_manager/: manifest.rs  mod.rs
src-tauri/src/api/openai/: error.rs  handlers.rs  mod.rs  responses.rs  router.rs  types.rs  upstream.rs
src-tauri/src/app/: bootstrap.rs  mod.rs
src-tauri/src/core/: attachments_text.rs  background_mode.rs  config.rs  device.rs  limits.rs  log.rs  mod.rs  modality.rs  performance.rs  precision.rs  prefix_cache.rs  prompt.rs  rayon_pool.rs  scheduler.rs  settings_v2.rs  state.rs  template_registry.rs  thread_priority.rs  types.rs
src-tauri/src/core/templates/: alpaca.rs  chatml.rs  chatqa.rs  deepseekr1.rs  deepseekr1_llama.rs  deepseekv3.rs  gemma2.rs  gemma3.rs  glm4.rs  glm4v.rs  llama.rs  llama3.rs  llama32.rs  mod.rs  phi3.rs  qwen2.rs  qwen3.rs  qwen3coder.rs  vicuna.rs  zephyr.rs
src-tauri/src/generate/: cancel.rs  ctx.rs  emit.rs  grammar.rs  mod.rs  thinking_parser.rs  tool_call_parser.rs
src-tauri/src/inference/: mod.rs  router.rs
src-tauri/src/inference/engine/: adapter.rs  llamacpp.rs  mod.rs  registry.rs  session_manager.rs  types.rs
src-tauri/src/inference/llamacpp/: args.rs  http_client.rs  mod.rs  process.rs  state.rs
src-tauri/src/inference/scheduler/: mod.rs  policy.rs  runtime.rs  types.rs
src-tauri/src/mcp/: agent.rs  mod.rs  runtime.rs  types.rs
src-tauri/src/models/: mod.rs  registry.rs
src-tauri/src/models/deepseek2/: config.rs  fused_moe.rs  gguf.rs  mod.rs  model.rs  quantized_model.rs  safetensors.rs
src-tauri/src/models/qwen2_moe/: fused_moe.rs  gguf.rs  mod.rs  quantized_model.rs
src-tauri/src/models/qwen3_moe/: mod.rs
src-tauri/src/retrieval/: budget.rs  embeddings_client.rs  local_rag.rs  mod.rs  orchestrator.rs  types.rs  web_fetch.rs  web_search.rs
src-tauri/tests/: architecture_detection.rs  chat_generation_integration.rs  deepseek2_tests.rs  glm_gguf_inference.rs  llama_architecture.rs  llama_state_sessions.rs  model_registry.rs  sse_robustness.rs
src/lib/: shortcuts.ts  version.ts
src/lib/chat/: Chat.svelte  prompts.ts  tool-update.ts  types.ts  utils.ts
src/lib/components/: ModelIcon.svelte  PerformanceMonitor.svelte  app-sidebar.svelte
src/lib/i18n/: config.ts
src/lib/model-manager/: model-identity.test.ts  model-identity.ts  (+6 more)
src/routes/: +layout.svelte  +page.svelte
src/tests/: chat-history-import.test.ts  chat-history.test.ts  download-manager.test.ts  inference-metrics.test.ts  listener.test.ts  local-models.test.ts  performance-service.test.ts  prompts.test.ts  setup.ts  tauri-utils.test.ts
(+136 files in other folders)
