[package]
name = "oxide-lab"
version = "0.13.1"
description = "Private AI chat application with local model support"
authors = ["FerrisMind"]
license = "Apache-2.0"
edition = "2024"

[lib]
name = "oxide_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools", "protocol-asset"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
oxide-hardware = { path = "crates/oxide-hardware" }
oxide-llamacpp = { path = "crates/oxide-llamacpp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
once_cell = "1.19"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
eventsource-stream = "0.2"
gguf = "0.1.2"
async-trait = "0.1"
tokenizers = { version = "0.21", features = ["onig"] }
minijinja = "2.0"
# rodio = { version = "0.21", optional = true }
# rubato = { version = "0.16", optional = true }
rand = "0.9"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.37"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
regex = "1.0"
rayon = "1.0"
bytes = "1.10"
byteorder = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
axum = { version = "0.8", features = ["tokio", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
strsim = "0.11"
urlencoding = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }

[features]
default = []

[package.metadata.cargo-machete]
ignored = ["rand", "tauri-build"]

[profile.dev]
debug-assertions = true

[profile.dev.package."*"]
debug-assertions = false

# Optimized build with debug symbols for profiling
[profile.release-with-debug]
inherits = "release"
debug = true


# Быстрая итеративная разработка с оптимизацией зависимостей
[profile.dev-fast]
inherits = "dev"
opt-level = 0                    # Быстрая компиляция основного кода
debug = "line-tables-only"       # Минимальная отладочная информация
incremental = true               # Инкрементальная компиляция

[profile.dev-fast.package."*"]
opt-level = 2                    # Оптимизация зависимостей

# Release: баланс между оптимизацией и временем сборки
[profile.release]
lto = "thin"          # thin LTO: быстрее fat, но всё ещё хорошая оптимизация
codegen-units = 8     # Параллелизм внутри крейта (8 потоков)
opt-level = 3

# Максимальная оптимизация для финальных билдов
[profile.release-optimized]
inherits = "release"
lto = "fat"           # Максимальный LTO
codegen-units = 1     # Лучшая оптимизация
strip = true          # Убрать символы


